# ------------------------------------------------------------------------------
#
# Copyright 2016 The Charon Platform Authors.
#
# All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
#
# ------------------------------------------------------------------------------

#add_subdirectory( callisto )
add_subdirectory( charon )
#add_subdirectory( miranda )
add_subdirectory( rhea )
add_subdirectory( triton )
