# ------------------------------------------------------------------------------
#
# Copyright 2016 The Charon Platform Authors.
#
# All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
#
# ------------------------------------------------------------------------------

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/clib)

add_subdirectory( QByteArrayList )
add_subdirectory( QDateTime )
add_subdirectory( QDir )
add_subdirectory( QDirIterator )
add_subdirectory( QFile )
add_subdirectory( QFileInfo )
add_subdirectory( QFileInfoList )
add_subdirectory( QImage )
add_subdirectory( QPixmap )
add_subdirectory( QRegExp )
add_subdirectory( QSqlDatabase )
add_subdirectory( QSqlQuery )
add_subdirectory( QString )
add_subdirectory( QStringList )
